# rust-test

./: Cargo.toml
derive-macro/src/: lib.rs
proto/: cli.proto
src/: main.rs
src/models/: cliente.rs
src/remotecli/: client.rs
